syntax = "proto3";

package work.sunist.project.alioth.rpc.proto;
option go_package = "./alioth";

message ServiceDiscoveryRequest {
  string service = 1;
  string min_version = 2;
}

message ServiceDiscoveryResponse {
  string service = 1;
  string name = 2;
  string version = 3;
  string address = 4;
  string last_updated = 5;
}
